--- a/.gitignore
+++ b/.gitignore
@@ -345,6 +345,7 @@ v8.log
 /third_party/libphonenumber/src
 /third_party/libsrtp
 /third_party/libsweadrenoext
+/third_party/libsta
 /third_party/libvpx
 /third_party/libwebm/source
 /third_party/libyuv
